# Controller-Wrapper-For-Sentakki

./: .gitignore  Controller Test Script.ahk  ControllerInput.cpp  ControllerInput.h  ControllerInput.manifest  ControllerMapper.cpp  ControllerToMouse.cpp  ControllerToNumberKeys.cpp  ControllerToTouch.cpp  ControllerToTouch.manifest  KeyboardMode.cpp  LICENSE  MouseMode.cpp  README.md  TESTING_CHECKLIST.md  TouchMode.cpp  build.bat  build_touch.bat  controller to maimai.ahk  main.cpp  simple_controller.cpp  simple_controller_clean (unused as of now).cpp
Old Versions and Build Files/: CMakeLists.txt  build.bat  build_clockwise.bat  build_direct.bat  build_osu.bat  build_simple.bat  build_vs2022.bat  comprehensive_controller_test.cpp  controller_diagnostic.cpp  controller_test.cpp  main.cpp  main_directinput.cpp  test_directinput.cpp
Touch Version (Incomplete, I do not have Touch device to test the thing)/: ControllerToTouch.cpp  ControllerToTouch.manifest  build_touch.bat
